CAUSEWAY-3889: IconUiEvent construction fix